docs/versioned_docs/version-1.2.5/reference/views.mdx
<!-- Generated by port_legacy_docs.py v2 from v1.2.5 (d226d745169891f79b1a767ebbc64dc51143d178). Historical snapshot—do not edit directly. -->

<a id="views"></a>
# Views

**Views** are app-customised UI surfaces inside Slack — the contents of a modal dialog or the App Home tab.

- `ModalView` — content of a modal opened with `views.open` / `views.update` / `views.push`.
- `HomeTabView` — content of the App Home tab, published with `views.publish`.

Pass `view.to_dict()` as the `view` argument to the Slack SDK's view methods.

Slack reference: [https://api.slack.com/reference/surfaces/views](https://api.slack.com/reference/surfaces/views)

### HomeTabView {#views.HomeTabView}

**Class**

```python
HomeTabView(blocks: Union[Block, List[Block]], private_metadata: Optional[str] = None, callback_id: Optional[str] = None, external_id: Optional[str] = None)
```

<div className="api-docstring">

`HomeTabViews` are used with the `views.publish` Web API method.

See: [https://api.slack.com/reference/surfaces/views#home](https://api.slack.com/reference/surfaces/views#home).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `blocks` | `Union[Block, List[Block]]` | A list of blocks that defines the content of the view (max 100). |
| `private_metadata` | `Optional[str]` | a string (max 3000 chars) that will be sent to your app<br />in `view_submission`. |
| `callback_id` | `Optional[str]` | A string that will identify submissions of this view. |
| `external_id` | `Optional[str]` | A custom identifier that is unique within the views of a<br />given Slack team. |

</div>

### ModalView {#views.ModalView}

**Class**

```python
ModalView(title: TextLike, blocks: Union[Block, List[Block]], close: Optional[TextLike] = None, submit: Optional[TextLike] = None, private_metadata: Optional[str] = None, callback_id: Optional[str] = None, clear_on_close: Optional[bool] = False, notify_on_close: Optional[bool] = False, external_id: Optional[str] = None, submit_disabled: Optional[bool] = False)
```

<div className="api-docstring">

Modal views are used with the `views.open`, `views.update` and `views.push`
    Slack Web API methods.

See: [https://api.slack.com/reference/surfaces/views#modal](https://api.slack.com/reference/surfaces/views#modal)

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `title` | `TextLike` | heading that appears at the top left of the view. |
| `blocks` | `Union[Block, List[Block]]` | a list of blocks (max 100) that define the content of the view. |
| `close` | `Optional[TextLike]` | the text of the close button (max 24 chars) in the view.<br />Must be `Text.PLAINTEXT`. |
| `submit` | `Optional[TextLike]` | the text of the submit button (max 24 chars) in the view.<br />Must be `Text.PLAINTEXT`. |
| `private_metadata` | `Optional[str]` | a string (max 3000 chars) that will be sent to your app<br />in `view_submission`. |
| `callback_id` | `Optional[str]` | A string that will identify submissions of this view. |
| `clear_on_close` | `Optional[bool]` | when `True` all views in the model will be cleared when<br />it is closed. |
| `notify_on_close` | `Optional[bool]` | when `True` a `view_closed` event will be sent when the<br />modal is closed. |
| `external_id` | `Optional[str]` | A custom identifier that is unique within the views of a<br />given Slack team. |
| `submit_disabled` | `Optional[bool]` | when `True` disabled submitting the form until one or<br />more inputs have been provided. Used only for<br />[`configuaration models`](https://api.slack.com/reference/workflows/configuration-view). |

</div>
